--- a/website.html
+++ b/website.html
@@ -1,3 +1,9 @@
-<button>Hello</button>
-<p>Paragraph of Text</p>
-<a href="https://www.youtube.com/" target="_blank">Link to Youtube</a>
+<p>
+    Paragraph of Text
+</p>
+<button>
+  Hello
+</button>
+<a href="https://www.youtube.com/" target="_blank">
+  Link to Youtube
+</a>
