--- a/buttons.html
+++ b/buttons.html
@@ -7,18 +7,35 @@
         width: 107px;
         border-radius: 3px;
         cursor: pointer;
+        margin-right: 8px;
+    }
+    
+    .join-button {
+        background-color: white;
+        border-color: rgb(41, 118, 211);
+        border-style: solid;
+        border-width: 1px;
+        color: rgb(41, 118, 211);
+        height: 36px;
+        width: 60px;
+        border-radius: 2px;
+        cursor: pointer;
+        margin-right: 8px;
+    }
+    
+    .tweet-button {
+        background-color: rgb(2, 158, 255);
+        color: white;
+        border: none;
+        height: 36px;
+        width: 80px;
+        border-radius: 18px;
+        font-weight: bold;
+        font-size: 15px;
+        cursor: pointer;
+        margin-right: 8px;
     }
 </style>
 <button class="subscribe-button">SUBSCRIBE</button>
-<style>
-    join-button {
-        background-color: rgb(255, 253, 253);
-        color: blue;
-        border: blue;
-        height: 36px;
-        width: 57px;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-</style>
-<button class="join-button">Join</button>
+<button class="join-button">JOIN</button>
+<button class="tweet-button">Tweet</button>
